--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nike</title>
+    <title>Rtest</title>
   </head>
   <body>
-    <noscript>Just Do It.</noscript>
+    <noscript>Test</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
